infra/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mandrade2
  namespace: mandrade2
spec:
  selector:
    app: mandrade2
  ports:
    - name: http
      port: 3000
      targetPort: 3000
