infra/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mandrade2
  namespace: mandrade2
  annotations:
    alb.ingress.kubernetes.io/group.name: "dev-platform"
    alb.ingress.kubernetes.io/group.order: "60"
    alb.ingress.kubernetes.io/healthcheck-path: /health
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/target-type: ip
spec:
  ingressClassName: alb
  rules:
    - host: internal-mandrade2.timedevops.click
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: mandrade2
                port:
                  number: 3000
